# DopeChaos

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  package-lock.json  package.json  tsconfig.json  vercel.json
app/: globals.css  layout.tsx
components/: AsciiLogo.tsx  Controls.tsx  ExplainPanel.tsx  TerminalShell.tsx  Viewer.tsx
crates/dc-app/: Cargo.toml
crates/dc-app/src/: app.rs  lib.rs  worker_bridge.rs  worker_handler.rs
crates/dc-app/src/components/: controls.rs  mod.rs  status_bar.rs  viewer.rs
crates/dc-core/: Cargo.toml
crates/dc-core/src/: lib.rs
crates/dc-core/src/systems/: ikeda.rs  julia.rs  mod.rs  peter_de_jong.rs
crates/dc-protocol/: Cargo.toml
crates/dc-protocol/src/: lib.rs
crates/dc-render/: Cargo.toml
crates/dc-render/src/: lib.rs
crates/dc-render/src/ascii/: amber_monitor.rs  mod.rs  terminal_noir.rs
crates/dc-render/src/density/: cosmic_dust.rs  mod.rs  soft_bloom.rs
crates/dc-render/src/pixel/: mod.rs  monochrome_ink.rs  neon_glow.rs
lib/: constants.ts  types.ts  useWorker.ts
lib/render/: ascii.ts  histogram.ts  palettes.ts
lib/systems/: index.ts  julia.ts  logistic.ts  lorenz.ts  registry.ts
public/: chaos.worker.js  styles.css
workers/: chaos.worker.ts
