[package]
name = "dopechaos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dc-protocol = { path = "../dc-protocol" }
dc-core     = { path = "../dc-core" }
dc-render   = { path = "../dc-render" }

leptos = { version = "0.6", features = ["csr"] }
serde_json = "1"

wasm-bindgen          = "0.2"
wasm-bindgen-futures  = "0.4"
js-sys                = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "EventTarget",
    "Event",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "CanvasRenderingContext2d",
    "ImageData",
    "DedicatedWorkerGlobalScope",
    "Performance",
    "ResizeObserver",
    "ResizeObserverEntry",
]
